--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,8 +12,8 @@ jobs:
         with:
           publish-features: "true"
           base-path-to-features: "./src"
-          features-namespace: "tailscale/codespace"
-          templates-namespace: "tailscale/codespace"
+          features-namespace: "wan0net/codespace"
+          templates-namespace: "wan0net/codespace"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 permissions:
